--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
           <button class="plusMinus">+/-</button>
           <button class="percent">%</button>
           <button class="divide">÷</button>
-
+          <button class="seven">7</button>
+          <button class="eight">8</button>
+          <button class="nine">9</button>
+          <button class="x">X</button>
+          <button class="four">4</button>
+          <button class="five">5</button>
+          <button class="six">6</button>
+          <button class="minus">—</button>
+          <button class="one">1</button>
+          <button class="two">2</button>
+          <button class="three">3</button>
+          <button class="plus">+</button>
+          <button class="zero">0</button>
+          <button class="decimal">.</button>
+          <button class="equals">=</button>
         </div>
 
         
