completed calculator project

--- a/index.html
+++ b/index.html
@@ -6,45 +6,43 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter">
 </head>
 
     <body>
 
       <div class='mainContainer'>
 
-        <div class="inputDisplay"></div>
+        <div class="inputDisplay">
+          <h1 class="display"></h1>
+        </div>
+
         <div class="buttonContainer">
-          <button class="Clear">C</button>
+          <button class="clear">C</button>
           <button class="plusMinus">+/-</button>
-          <button class="percent">%</button>
-          <button class="divide">÷</button>
-          <button class="seven">7</button>
-          <button class="eight">8</button>
-          <button class="nine">9</button>
-          <button class="x">X</button>
-          <button class="four">4</button>
-          <button class="five">5</button>
-          <button class="six">6</button>
-          <button class="minus">—</button>
-          <button class="one">1</button>
-          <button class="two">2</button>
-          <button class="three">3</button>
-          <button class="plus">+</button>
-          <button class="zero">0</button>
-          <button class="decimal">.</button>
+          <button class="percent operator">%</button>
+          <button class="divide operator">÷</button>
+          <button class="digit">7</button>
+          <button class="digit">8</button>
+          <button class="digit">9</button>
+          <button class="x operator">X</button>
+          <button class="digit">4</button>
+          <button class="digit">5</button>
+          <button class="digit">6</button>
+          <button class="minus operator">—</button>
+          <button class="digit">1</button>
+          <button class="digit">2</button>
+          <button class="digit">3</button>
+          <button class="plus operator">+</button>
+          <button class="digit" id="zero">0</button>
+          <button class="digit decimal">.</button>
           <button class="equals">=</button>
         </div>
 
         
-        
-
-
-
-
-
       </div>
 
-        <script></script>
+        <script src="script.js"></script>
 
     </body>
 </html>
